# telegram_template

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2f955a0075e0_create_users_table.py
tg_bot_template/: __main__.py
tg_bot_template/cache/: redis.py
tg_bot_template/core/: config.py  loader.py
tg_bot_template/database/: database.py
tg_bot_template/database/models/: __init__.py  base.py  user.py
tg_bot_template/filters/: admin.py
tg_bot_template/handlers/: __init__.py  admin.py  all_message.py  cancel.py  help.py  profile.py  start.py  start_game.py  tap_handler.py  top.py
tg_bot_template/keyboards/: default_commands.py
tg_bot_template/keyboards/inline/: click.py  menu.py
tg_bot_template/keyboards/reply/: cancel.py  menu.py
tg_bot_template/middlewares/: __init__.py  auth.py  database.py
tg_bot_template/services/: users.py
tg_bot_template/states/: states.py
