[project]
name = "tgbot-template"
version = "0.1.0"
description = "simple template for tg bot via aiogram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aioschedule>=0.5.2",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "loguru>=0.7.3",
    "orjson>=3.10.18",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvloop>=0.21.0",
]
